# alpha_code

./: .env.example  .gitignore  ALPHA.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  analyze_tools.py  main.py  pyproject.toml  release-please-config.json
.alpha/: mcp.json.example  settings.json.example
.github/workflows/: ci.yml
agents/default/: agent.yaml
agents/lean/: agent.yaml
agents/researcher/: agent.yaml
agents/test-researcher/: agent.yaml
alpha/: __init__.py  _platform.py  _rate_limiter.py  _registry.py  _security_log.py  agent.py  approval.py  attachments.py  clipboard.py  config.py  context.py  display.py  executor.py  history.py  hooks.py  llm.py  llm_anthropic.py  net_utils.py  ocr.py  project_context.py  repl_input.py  settings.py  web_search.py
alpha/agents/: __init__.py  loader.py  registry.py  scope.py  workspace.py
alpha/cli/: commands.py  lifecycle.py  setup.py
alpha/mcp/: __init__.py  client.py  config.py  loader.py
alpha/skills/: __init__.py  loader.py  prompt.py  registry.py
alpha/tools/: __init__.py  _composite_deploy.py  _composite_helpers.py  _composite_project.py  _composite_snr.py  _composite_tests.py  _delegate_core.py  _subprocess_helpers.py  apify_tools.py  browser_session.py  browser_tools.py  code_tools.py  composite_tools.py  database_tools.py  delegate_tools.py  file_tools.py  git_tools.py  network_tools.py  path_helpers.py  pipeline_tools.py  plan_tools.py  safe_env.py  search_tools.py  shell_tools.py  skill_tools.py  system_tools.py  workspace.py
alpha/wizard/: __init__.py  env.py  prompts.py  runner.py  steps.py
docs/: SKILLS_AUDIT.md  STATUS.md  USER_GUIDE.md
prompts/: subagent.md  system.md
scripts/: audit_skills.py
scripts/hooks/: README.md  pre-commit
skills/1password/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/bear-notes/: SKILL.md
skills/blogwatcher/: SKILL.md
skills/blucli/: SKILL.md
skills/bluebubbles/: SKILL.md
skills/camsnap/: SKILL.md
skills/clawhub/: SKILL.md
skills/coding-agent/: SKILL.md
skills/discord/: SKILL.md
skills/eightctl/: SKILL.md
skills/gemini/: SKILL.md
skills/gh-issues/: SKILL.md
skills/gifgrep/: SKILL.md
skills/github/: SKILL.md
skills/gog/: SKILL.md
skills/goplaces/: SKILL.md
skills/himalaya/: SKILL.md
skills/imsg/: SKILL.md
skills/mcporter/: SKILL.md
skills/model-usage/: SKILL.md
skills/nano-pdf/: SKILL.md
skills/notion/: SKILL.md
skills/obsidian/: SKILL.md
skills/openai-whisper/: SKILL.md
skills/openai-whisper-api/: SKILL.md
skills/openhue/: SKILL.md
skills/oracle/: SKILL.md
skills/ordercli/: SKILL.md
skills/peekaboo/: SKILL.md
skills/sag/: SKILL.md
skills/session-logs/: SKILL.md
skills/sherpa-onnx-tts/: SKILL.md
skills/slack/: SKILL.md
skills/songsee/: SKILL.md
skills/sonoscli/: SKILL.md
skills/spotify-player/: SKILL.md
skills/summarize/: SKILL.md
skills/taskflow/: SKILL.md
skills/taskflow-inbox-triage/: SKILL.md
skills/things-mac/: SKILL.md
skills/tmux/: SKILL.md
skills/trello/: SKILL.md
skills/video-frames/: SKILL.md
tests/: conftest.py  test_approval.py  test_attachments.py  test_bugs_v10_stragglers.py  test_clipboard.py  test_code_sandbox.py  test_config.py  test_context_compression.py  test_delegate_workspace.py  test_executor.py  test_executor_parallel.py  test_history.py  test_history_perms.py  test_hooks.py  test_llm.py  test_llm_anthropic.py  test_logic_fixes.py  test_logic_medio_fixes.py  test_maint_perf_quick_wins.py  test_maint_perf_quick_wins_2.py  test_mcp.py  test_perf_fixes.py  test_perf_v10_stragglers.py  test_permissions.py  test_pg_ssl_pinning.py  test_pipeline_fd_leak.py  test_pipeline_redirect_nofollow.py  test_plan_tools.py  test_project_context.py  test_quick_wins_a.py  test_reasoning_content.py  test_resilience_v10_v11_batch2.py  test_resilience_v10_v11_fixes.py  test_safe_env_credential_filter.py  test_search_ripgrep.py  test_security_medio_fixes.py  test_security_v10_v11_batch2.py  test_security_v10_v11_fixes.py  test_subagent_blocked.py  test_subagent_policy.py  (+3 more)
(+7 files in other folders)
