[project]
name = "alpha-code"
version = "1.0.0"
description = "Alpha Code — Standalone terminal agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "ddgs>=9.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[project.scripts]
alpha = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["alpha*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
