[project]
name = "alpha-code"
version = "1.0.0"
description = "Alpha Code — Standalone terminal agent"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "ddgs>=9.0",
    "pyyaml>=6.0",
    "prompt_toolkit>=3.0",
    # Pin transitive: lxml < 6.1.0 e vulneravel a CVE-2026-41066 (XXE/local file read)
    "lxml>=6.1.0",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
network = [
    # http_request usa aiohttp lazy-import; sem isso o tool retorna ImportError
    "aiohttp>=3.9",
]
database = [
    # query_database/list_tables/describe_table para PostgreSQL
    "asyncpg>=0.29",
]
web = [
    # extract_page_content (web_search) usa trafilatura como extrator primario
    "trafilatura>=1.6",
]
all = [
    "alpha-code[browser,network,database,web,dev]",
]
dev = [
    # #025/#026 (SEC V1.1): pin >= 9.0.3 quando upstream cortar release
    # com fix de CVE-2026-XXXX (pytest). Hoje suite roda em 9.0.2 — quando
    # 9.0.3 sair, `pip install -e .[dev] --upgrade` puxa automaticamente.
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24",
]

[project.scripts]
alpha = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
include = ["alpha*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
